# scia_retrieval_2d

./: .cproject  .gitignore  .project  .travis.yml  Ausdrucke.cpp  Ausdrucke.h  Ausgewertete_Messung_Limb.h  Ausgewertete_Messung_Nadir.h  CMakeLists.txt  Datei_IO.cpp  Datei_IO.h  Dateinamensteile_Bestimmen.cpp  Dateinamensteile_Bestimmen.h  Fit_Polynom.cpp  Fit_Polynom.h  Gitterpunkt.cpp  Gitterpunkt.h  Glaetten.cpp  Glaetten.h  Glaetten_2D.cpp  Glaetten_2D.h  Konfiguration.cpp  Konfiguration.h  Koordinatentransformation.cpp  Koordinatentransformation.h  LimbNadir_IO.cpp  LimbNadir_IO.h  Limbauswertung.cpp  Limbauswertung.h  Liniendaten.cpp  Liniendaten.h  MPL_Matrix.h  MPL_Vektor.h  Matrizen_Aufbauen.cpp  Matrizen_Aufbauen.h  Matrizzen_Aufbauen.cpp  Matrizzen_Aufbauen.h  Messung.cpp  Messung.h  Messung_Limb.cpp  (+36 more)
.github/workflows/: ci_build_linux.yml
DATA/: NO_regress_model.json  NO_regress_model.py  f107_noontime_flux_obs.txt  f107a_noontime_flux_obs.txt
